syntax = "proto3";

package cv;

import "google/protobuf/timestamp.proto";

import "./cv_education_certification.proto";
import "./cv_work_experience.proto";
import "./cv_experience_project.proto";

service CvServiceGrpc {
    rpc getCv (InputCvIdRequest) returns (CvResponse) {}
    rpc getCvByCvIdAndUserId (InputCvIdAndUserIdRequest) returns (CvResponse) {}
    rpc createCv (InputCreateCvRequest) returns (CvResponse) {}
}

message Cv {
    int32 id = 1;
    string name = 2;
    string gender = 3;
    string nationality = 4;
    string objective = 5;
    string summary = 6;
    bool isDeleted = 7;
    int32 userId = 8;
}

message EducationCertification {
    int32 id = 1;
    string name = 2;
    string time = 3;
    string major = 4;
    bool isDeleted = 5;
    Cv cv = 6;
}

message WorkExperience {
    int32 id = 1;
    string time = 2;
    string company = 3;
    string jobTitle = 4;
    string jobDescription = 5;
    bool isDeleted = 6;
    Cv cv = 7;
}

message ExperienceProject {
    int32 id = 1;
    string name = 2;
    string time = 3;
    string projectDescription = 4;
    string role = 5;
    string responsibilities = 6;
    string programmingLanguages = 7;
    bool isDeleted = 8;
    Cv cv = 9;
    WorkExperience workExperience = 10;
}

message InputCvIdRequest {
    int32 cvId = 1;
}

message InputCvIdAndUserIdRequest {
    int32 cvId = 1;
    int32 userId = 2;
}

message InputCreateCvRequest {
    string name = 1;
    string gender = 2;
    string nationality = 3;
    string objective = 4;
    string summary = 5;
    int32 userId = 6;
    repeated EducationCertification educationCertifications = 7;
    repeated WorkExperience workExperiences = 8;
    repeated ExperienceProject experienceProjects = 9;
}

message CvResponse {
    Cv cv = 1;
}

